[project]
name = "agentic-rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-pinecone>=0.2.9",
    "langchain-tavily>=0.2.9",
    "langchainhub>=0.1.21",
    "langgraph>=0.5.3",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
]
